--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.links {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 50px;
+  box-sizing: content-box;
+  padding: 3px;
 }
 
-.App-link {
-  color: #61dafb;
+.border {
+  justify-content: center;
+  display: flex;
+  color: darkmagenta;
+  border-style: dashed;
+  border-radius: 10px;
+  padding: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.linkSection {
+  justify-content: center;
+  height: 500px;
+  background-color: skyblue;
+}
+
+.screen {
+  background-color: black;
+}
+
+.parent {
+  height: 100%;
+  padding: 50px;
+  background-color: cadetblue;
+}
+.box {
+  margin-top: 50px;
+  background-color: black;
+}
+.letter {
+  padding: 6px;
 }
